--- a/index.html
+++ b/index.html
@@ -32,35 +32,15 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
+          <img src="img/megane-slider.png" alt="...">
+        </div>
+        <div class="item">
           <img src="img/fabia-slider.png" alt="...">
-          <div class="carousel-caption">
-            ...
-          </div>
         </div>
         <div class="item">
           <img src="img/focus-slider.png" alt="...">
-          <div class="carousel-caption">
-            ...
-          </div>
         </div>
-        <div class="item">
-          <img src="img/astra-slider.png" alt="...">
-          <div class="carousel-caption">
-            ...
-          </div>
-        </div>
-        ...
       </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
 	</body>
 </html>
