--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Strona Głowna</title>
+    <title>Strona Główna</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet"
@@ -21,26 +21,39 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="js/bootstrap.min.js"></script>
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="img/megane-slider.png" alt="...">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 id="header-home">KupAuto.pl<small> - porównywarka nowych samochodów</small></h1>
         </div>
-        <div class="item">
-          <img src="img/fabia-slider.png" alt="...">
-        </div>
-        <div class="item">
-          <img src="img/focus-slider.png" alt="...">
+      </div>
+    <div class="row">
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="img/megane-slider.png" alt="...">
+          </div>
+          <div class="item">
+            <img src="img/fabia-slider.png" alt="...">
+          </div>
+          <div class="item">
+            <img src="img/focus-slider.png" alt="...">
+          </div>
         </div>
       </div>
     </div>
+    <div class="row">
+      <div id="button-home" class="col-lg-12">
+        <a class="btn btn-lg btn-primary" href="choose-model.html" role="button">Znajdź najlepszą ofertę!</a>
+      </div>
+    </div>
+  </div>
 	</body>
 </html>
